--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Webpage</title>
+    <title>Cloud Computing lab</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,9 +55,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Animated Page</h1>
-        <p>This is a simple page with some cool animations.</p>
-        <button class="button" onclick="alert('Button Clicked!')">Click Me</button>
+        <h1>Welcome to Cloud Computing Lab</h1>
+        <p>This static website is hosted by P Srihith Reddy on Google Cloud</p>
+        <button class="button" onclick="alert('Button is Clicked. An action of click was detected')">Click Me</button>
     </div>
 </body>
 </html>
